force-app/main/default/objects/NZC_EmissionsMatchingConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AllowCustomTagMatching__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should custom matching based on fields be allowed? ( overrides emissions factors from asset )</description>
        <inlineHelpText>Should custom matching based on fields be allowed? ( overrides emissions factors from asset )</inlineHelpText>
        <label>AllowCustomTagMatching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateMatchingField__c</fullName>
        <description>Field to match dates to emission factors on. Expecting field name ( StartDate EndDate ) or Midpoint</description>
        <inlineHelpText>Field to match dates to emission factors on. Expecting field name ( StartDate EndDate ) or Midpoint</inlineHelpText>
        <label>Date Matching Field</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoMatchEmissionsOnInsert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the emissions matching happen on insert?</description>
        <inlineHelpText>Should the emissions matching happen on insert?</inlineHelpText>
        <label>Do match emissions on insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoMatchEmissionsOnUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should emissions matching happen on record update?</description>
        <inlineHelpText>Should emissions matching happen on record update?</inlineHelpText>
        <label>Do match emissions on update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emissions_Matching_Batch_Size__c</fullName>
        <description>How many emissions records should be matched at once?</description>
        <inlineHelpText>How many emissions records should be matched at once?</inlineHelpText>
        <label>Emissions Matching Batch Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emissions_Recalc_Batch_Size__c</fullName>
        <description>How many emission sets should be targeted at one time?</description>
        <inlineHelpText>How many emission sets should be targeted at one time?</inlineHelpText>
        <label>Emissions Recalc Batch Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>doLog__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable apex debugging messages</description>
        <inlineHelpText>Enable apex debugging messages</inlineHelpText>
        <label>do Log</label>
        <type>Checkbox</type>
    </fields>
    <label>NZC Emissions Matching Configuration</label>
</CustomObject>